force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/timetakentoadd__c.field-meta.xml
<CustomField>
    <fullName>timetakentoadd__c</fullName>
    <label>TimeTakenToAdd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>