force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/timetakentochg__c.field-meta.xml
<CustomField>
    <fullName>timetakentochg__c</fullName>
    <label>TimeTakenToChg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>