force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/tpmpickupflag__c.field-meta.xml
<CustomField>
    <fullName>tpmpickupflag__c</fullName>
    <label>TpmPickupFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>