force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/trnyear__c.field-meta.xml
<CustomField>
    <fullName>trnyear__c</fullName>
    <label>TrnYear</label>
    <length>255</length>
    <type>Text</type>
</CustomField>