force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/webcreated__c.field-meta.xml
<CustomField>
    <fullName>webcreated__c</fullName>
    <label>WebCreated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>