force-app/main/default/objects/CommercientSF__SorMasterRep__c/listViews/CommercientSF__All.listView-meta.xml
<ListView>
    <fullName>CommercientSF__All</fullName>
    <columns>NAME</columns>
    <columns>CommercientSF__OrderDate__c</columns>
    <columns>CommercientSF__Account__c</columns>
    <columns>CommercientSF__Branch__c</columns>
    <columns>CommercientSF__DocumentType__c</columns>
    <columns>CommercientSF__InvoiceNumber__c</columns>
    <columns>CommercientSF__OrderType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>